--- a/Celular.css
+++ b/Celular.css
@@ -2,6 +2,10 @@
     body {
         align-items: center;
         flex-flow: column-reverse nowrap;
+        overflow-y: auto;
+    }
+    main#mainD {
+        overflow-y: auto;
     }
     nav#navL {
         height: 100px;
