--- a/style.css
+++ b/style.css
@@ -15,10 +15,29 @@ body {
 nav#navL {
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
     width: 150px;
     background-color: rgb(18, 18, 18);
+}
+h2#btn {
+    padding: 15px;
+    margin-top: 40px;
+    font-size: 18px;
+    background-color: rgb(27, 27, 27);
+    border-radius: 10px;
+    justify-self: start;
+    align-self: flex-start;
+    box-shadow: red 0px 0px 3px ;
+    animation-name:surgir;
+    margin-left: 20px;
+    opacity: 0;
+    animation-delay: 1s;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
+}
+h2#btn:hover {
+    cursor: pointer;
 }
 main#mainD {
     width: 100vw;
@@ -39,6 +58,9 @@ div#divIMG {
     background-color: rgba(71, 71, 71,0.2);
     text-shadow: 0px 0px 1px white;
     transition: all 0.2s ease;
+    animation-name:esticar;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
 }
 
 div#divIMG:hover {
@@ -81,7 +103,6 @@ div#divFilm > img {
     height: 230px;
 }
 div#filaDfilm {
-    background-color: transparent;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -112,4 +133,50 @@ div#imagemjn > img {
     background-color: transparent;
     width: 150px;
     float:right
+}
+section#exemplo > section {
+    display: flex;
+    background-color: rgb(18, 18, 18);
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center ;
+}
+div#logoSerFil > img {
+    animation-name:surgir;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
+    height: 200px;
+    border: white 0px solid;
+}
+div#videoDemo > img {
+    border: 3px solid rgba(90, 90, 90, 0.158);
+    box-shadow: -4px 2px 10px 10px #00000055;
+    animation-name:surgir;
+    animation-duration: 1.5s;
+    animation-delay: 0.5s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+section#exemplo {
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.196);
+    display: flex;
+    flex-flow: row nowrap;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+div#resumo {
+    animation-name:surgir;
+    animation-duration: 1.5s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+    opacity: 0;
+    font-weight: 400;
+    padding: 20px;
+    height: 120px;
+    line-height: 1.5em;
+    font-size: 20px;
+    background-color: transparent;
+    border: 0px solid white;
 }
