--- a/style.css
+++ b/style.css
@@ -86,15 +86,13 @@ background-color: transparent;
 overflow-x:hidden;
 overflow-y: hidden;
 }
-section.Stable::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
 .rodar {
     overflow-x: scroll;
 }
-.rodar::-webkit-scrollbar {
-    display: none;
-}
+
 section.Stable > h1 {
     color: white;
     font-weight: 500;
@@ -120,11 +118,11 @@ div#filaDfilm {
     transition: all 0.2s ease;
 }
 div#divFilm >img:hover {
-    border: 1px rgba(255, 255, 255, 0.595) solid;
+    border: 0px rgba(255, 255, 255, 0.595) solid;
     transition: all 0.2s ease;
-    box-shadow: 0px 0px 3px rgba(255, 255, 255, 0.69);
+    box-shadow: 0px 0px 0px rgba(255, 255, 255, 0.69);
     cursor: pointer;
-    scale: 1.02;
+    scale: 1.05;
 }
 div#imagemjn {
     z-index: 999;
